<resources>
    <string name="app_name">CriEngine</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris consectetur rutrum enim, finibus consectetur ex pharetra a. Donec tellus massa, iaculis facilisis laoreet et, condimentum vitae mauris. Fusce et neque eu dolor commodo sollicitudin. Duis vel viverra tellus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vivamus est tellus, molestie sed eros in, bibendum pulvinar lectus. Vestibulum fringilla euismod lorem in imperdiet. Vivamus venenatis ante lobortis mollis mattis. Curabitur pulvinar elit at venenatis porta. Etiam et scelerisque justo, vitae dignissim leo. Donec elementum mi sit amet ante aliquet varius. Proin pretium lacus a nibh sodales aliquam.</string>

    <!-- Profile Component -->
    <string name="user_profile_text">%1$s\'s Profile</string>
    <string name="bio_header">Bio</string>
    <string name="contact_info">Contact Information</string>
    <string name="phone_header">Phone:</string>
    <string name="address_header">Address:</string>
    <string name="phone_text_hint">(XXX) XXX-XXXX</string>
    <string name="address_text_hint">52 Example St</string>

    <!--  My Profile Activity  -->
    <string name="cancel_button">Cancel</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>

    <!-- My Books Activity  -->
    <string name="add_a_book_button">Add A Book</string>
    <string name="my_books_header">My Books</string>
    <string name="my_books_filter">Filter</string>

    <!-- My Book Filter Fragment -->
    <string name="filter_fragment_header">Filter By:</string>
    <string name="filter_available_checkbox">Available</string>
    <string name="filter_requests_checkbox">Requested</string>
    <string name="filter_accepted_checkbox">Accepted</string>
    <string name="filter_borrowed_checkbox">Borrowed</string>

    <!-- Requests For Book Activity -->
    <string name="requests_for_book_header">Requests on: INSERT NAME</string>

    <!-- Add Book Activity -->
    <string name="scan_book_button">Scan</string>
    <string name="book_title_hint">Book Title</string>
    <string name="book_desc_hint">Description</string>
    <string name="book_author_hint">Author</string>
    <string name="book_isbn_hint">ISBN</string>
    <string name="book_status_hint">Status</string>
    <string name="book_imageurl_hint">Image URL (optional)</string>
    <string name="book_warning">*Please Fill Out All Fields</string>
    <string name="popup_confirm">Book Created</string>

    <!--  Book Details Activity  -->
    <string name="book_title_placeholder">Title</string>
    <string name="book_detail">Detail: </string>
    <string name="book_author">Author: </string>
    <string name="book_isbn">ISBN: </string>
    <string name="book_status">Status: </string>
    <string name="book_owner">Owner: </string>
    <string name="book_borrower">Borrower: </string>

    <!--  My Book Details Activity  -->
    <string name="edit_book">Edit Book</string>
    <string name="see_requests">See Requests</string>
    <string name="delete_book">Delete Book</string>

    <!-- Notifications Activity -->
    <string name="notifications_header">Notifications</string>

    <!-- Login Activity -->
    <string name="login_header">Login</string>

    <!-- Bottom Navigation -->
    <string name="title_search">Search</string>
    <string name="title_my_books">My Books</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_profile">My profile</string>
    <string name="title_my_requests">My Requests</string>
</resources>